Fix: Navbar style and grammar improvements (#33)
* Fix: Corrected navbar colors, padding on all pages, and grammar on masthead

* fix for issue24 (#34)

* Improve header styling and add border between sections (#45)

* Update about.css (#49)

fixed card texts pushed out of the box on mobile devices

* Updated Masthead Design (#52)

* feat: typo fixed and Style footer social media icons with hover effect (#35)

* Fixed layout of each card in Masthead section (#55)

* added scroll-progress-bar (#56)

* Resolved merge conflicts and made requested changes

---------

--- a/about.css
+++ b/about.css
@@ -95,10 +95,12 @@ font-size: 20px
 }
 
 .nav-links ul li a{
-    color: #780000;
+    color: #fdf0d5;
     text-decoration: none;
     font-family: serif;
     font-size: 13px;
+    padding: 12px 16px;
+    display: block;
 
 }
 .nav-links ul li::after {
@@ -120,36 +122,38 @@ nav .fa {
 }
 
 @media(max-width: 700px) {
-        .nav-links ul li {
-            display: block;
-        }
-        .nav-links {
-            position: fixed;
-            background: #fde74c40;
-            height: 100vh;
-            width: 200px;
-            top: 0;
-            right: -200px;
-            text-align: left;
-            z-index: 2;
-            transition: 1s;
-        }
+    .nav-links ul li {
+        display: block;
+    }
+    .nav-links {
+        position: fixed;
+        background: #780000fc;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
 
-        nav .fa{
-            display: block;
-            color: #780000;
-            margin: 10px;
-            font-size: 22px;
-            cursor: pointer;
-        }
-        .nav-links ul{
-            padding: 30px;
-        }
-        .nav-links li{
-            background-color: rgb(255, 252, 74);;
-            color : white;
-        }
-
+    nav .fa-times {
+    display: block;
+    color: #fdf0d5;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  nav .fa-bars {
+    display: block;
+    color: #780000fc; 
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+    .nav-links ul{
+        padding: 30px;
+    }
     }
      /* clickable cards */
     .landmarkCard{
