--- a/issue.css
+++ b/issue.css
@@ -102,11 +102,12 @@
 }
 
 .nav-links ul li a{
-    color: #780000;
+    color: #fdf0d5;
     text-decoration: none;
     font-family: serif;
     font-size: 13px;
-
+    padding: 12px 16px;
+    display: block;
 }
 .nav-links ul li::after {
     content: '';
@@ -137,7 +138,7 @@ nav .fa {
         }
         .nav-links {
             position: fixed;
-            background: #8bbad3;
+            background: #780000fc;
             height: 100vh;
             width: 200px;
             top: 0;
@@ -147,13 +148,20 @@ nav .fa {
             transition: 1s;
         }
     
-        nav .fa{
-            display: block;
-            color: #780000;
-            margin: 10px;
-            font-size: 22px;
-            cursor: pointer;
-        }
+        nav .fa-times {
+    display: block;
+    color: #fdf0d5;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  nav .fa-bars {
+    display: block;
+    color: #780000fc; 
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
         .nav-links ul{
             padding: 30px;
         }
