--- a/style.css
+++ b/style.css
@@ -99,7 +99,14 @@ nav {
     text-decoration: none;
     font-family: serif;
     font-size: 13px;
+    padding: 12px 16px;
+    display: block;
 
+}
+
+.nav-links ul li a:hover{
+    text-decoration: underline;
+    transition: 0.3s ease;
 }
 
 .nav-links ul li::after {
@@ -132,7 +139,7 @@ nav .fa {
     }
     .nav-links {
         position: fixed;
-        background: #003049;
+        background: #780000fc;
         height: 100vh;
         width: 200px;
         top: 0;
