--- a/submission.css
+++ b/submission.css
@@ -100,10 +100,12 @@ nav {
 }
 
 .nav-links ul li a {
-  color: #780000;
+  color: #fdf0d5;
   text-decoration: none;
   font-family: serif;
   font-size: 13px;
+  padding: 12px 16px;
+  display: block;
 }
 .nav-links ul li::after {
   content: "";
@@ -134,7 +136,7 @@ nav .fa {
   }
   .nav-links {
     position: fixed;
-    background: #8bbad3;
+    background: #780000fc;
     height: 100vh;
     width: 200px;
     top: 0;
@@ -144,9 +146,16 @@ nav .fa {
     transition: 1s;
   }
 
-  nav .fa {
+  nav .fa-times {
     display: block;
-    color: #780000;
+    color: #fdf0d5;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  nav .fa-bars {
+    display: block;
+    color: #780000fc;
     margin: 10px;
     font-size: 22px;
     cursor: pointer;
